chat word wrap fixture

--- a/src/app/chat-message/chat-message.component.scss
+++ b/src/app/chat-message/chat-message.component.scss
@@ -13,6 +13,7 @@
 	font-family: 'Poppins-Regular';
 	font-size: 12px;
 	font-weight: 400;
+	word-wrap: break-word;
 
 }
 
